feat: Integrate MessageService for localized command responses and add English locale support

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,8 @@
 # Configurações do JocoTerrenos
 
+# Idioma ativo para mensagens (ex.: pt_BR, en_US)
+language: pt_BR
+
 # Configurações de Banco de Dados
 database:
   # Tipo de banco de dados: SQLITE, MYSQL, POSTGRESQL
