--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,6 +22,6 @@ commands:
     permission-message: Você não tem permissão para usar este comando!
   terreno:
     description: Gerencia terrenos
-    usage: /terreno <comprar|listar|info|deletar|pvp|mobs|publico|tp>
+    usage: "§c/terreno <comprar|listar|info|deletar|pvp|mobs|publico|tp>"
     permission: jocoterrenos.terreno
-    permission-message: Você não tem permissão para usar este comando!
+    permission-message: "§cVocê não tem permissão para usar este comando!"
